--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,18 @@
 version: 2
+
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.1
+      - image: continuumio/miniconda3
     working_directory: ~/repo
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            - v1-dependencies-
       - run:
           name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            python3 setup.py install
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
+          command: python3 setup.py install
+  test:
+    steps:
+      - checkout
       - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            python setup.py test
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
-          
+          name: Install tests dependencies and run the tests
+          command: python3 setup.py test
